--- a/src/qt/qt_settingsdisplay.ui
+++ b/src/qt/qt_settingsdisplay.ui
@@ -26,19 +26,6 @@
    <property name="bottomMargin">
     <number>0</number>
    </property>
-   <item row="0" column="0">
-    <widget class="QLabel" name="labelVideo">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Video:</string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0" colspan="2">
     <widget class="QComboBox" name="comboBoxVideo">
      <property name="sizePolicy">
@@ -65,8 +52,8 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="labelVideoSecondary">
+   <item row="0" column="0">
+    <widget class="QLabel" name="labelVideo">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -74,20 +61,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Video #2:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QComboBox" name="comboBoxVideoSecondary">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="maxVisibleItems">
-      <number>30</number>
+      <string>Video:</string>
      </property>
     </widget>
    </item>
@@ -112,49 +86,88 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
+   <item row="6" column="0" colspan="2">
     <widget class="QCheckBox" name="checkBox8514">
      <property name="text">
       <string>IBM 8514/A Graphics</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="2">
-    <widget class="QPushButton" name="pushButtonConfigure8514">
-     <property name="text">
-      <string>Configure</string>
+   <item row="3" column="0" colspan="2">
+    <widget class="QComboBox" name="comboBoxVideoSecondary">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maxVisibleItems">
+      <number>30</number>
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="2">
-    <widget class="QCheckBox" name="checkBoxXga">
+   <item row="2" column="0">
+    <widget class="QLabel" name="labelVideoSecondary">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
-      <string>XGA Graphics</string>
+      <string>Video #2:</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="2">
-    <widget class="QPushButton" name="pushButtonConfigureXga">
-     <property name="text">
-      <string>Configure</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0" colspan="2">
+   <item row="8" column="0" colspan="2">
     <widget class="QCheckBox" name="checkBoxDa2">
      <property name="text">
       <string>IBM PS/55 Display Adapter Graphics</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="2">
+   <item row="6" column="2">
+    <widget class="QPushButton" name="pushButtonConfigure8514">
+     <property name="text">
+      <string>Configure</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="2">
+    <widget class="QCheckBox" name="checkBoxXga">
+     <property name="text">
+      <string>XGA Graphics</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="2">
     <widget class="QPushButton" name="pushButtonConfigureDa2">
      <property name="text">
       <string>Configure</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="0" colspan="3">
+   <item row="7" column="2">
+    <widget class="QPushButton" name="pushButtonConfigureXga">
+     <property name="text">
+      <string>Configure</string>
+     </property>
+    </widget>
+   </item>
+   <item row="11" column="0" colspan="3">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="9" column="0" colspan="3">
     <widget class="QGroupBox" name="groupBoxEDID">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -217,7 +230,7 @@
      </layout>
     </widget>
    </item>
-   <item row="9" column="0" colspan="3">
+   <item row="10" column="0" colspan="3">
     <widget class="QWidget" name="widget" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -227,18 +240,19 @@
      </property>
     </widget>
    </item>
-   <item row="10" column="0" colspan="3">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="5" column="0">
+    <widget class="QCheckBox" name="checkBoxVoodoo2">
+     <property name="text">
+      <string>Voodoo 2 Graphics (AGP)</string>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
+    </widget>
+   </item>
+   <item row="5" column="2">
+    <widget class="QPushButton" name="pushButtonConfigureVoodoo2">
+     <property name="text">
+      <string>Configure</string>
      </property>
-    </spacer>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -257,6 +271,8 @@
   <tabstop>pushButtonConfigureVideoSecondary</tabstop>
   <tabstop>checkBoxVoodoo</tabstop>
   <tabstop>pushButtonConfigureVoodoo</tabstop>
+  <tabstop>checkBoxVoodoo2</tabstop>
+  <tabstop>pushButtonConfigureVoodoo2</tabstop>
   <tabstop>checkBox8514</tabstop>
   <tabstop>pushButtonConfigure8514</tabstop>
   <tabstop>checkBoxXga</tabstop>
